# query-pro-bg-rust

./: .gitignore  Cargo.toml  DEV.md  Rocket.toml
src/: controller.rs  lib.rs  main.rs
src/component/: catchers.rs  cors.rs  global.rs  mod.rs  uid.rs
src/config/: config.rs  config.toml  mod.rs
src/controller/: query_pro_controller.rs
src/helper/: log.rs  mod.rs  resp.rs  resp_error_code.rs  resp_macros.rs
src/model/: mod.rs  permissions.rs  query_structure.rs
src/service/: mod.rs  query_pro_service.rs
src/types/: mod.rs  query_structure.rs
tests/: server.rs
tests/helpers/: get_token.rs
