[package]
name = "query-pro-bg-rust"
version = "0.1.0"
authors = ["HerbLuo <cloudself.cn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["mysql", "r2d2", "chrono"] } # mysql
serde = { version = "1.0", features = ["derive"] } # serialize
lazy_static = "1.4"
serde_json = "1.0"
log = { version = "0.4", features= ["max_level_debug", "release_max_level_info"] }
log4rs = { version = "0.11",  features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
rocket = "0.4" # http
rocket_contrib = { version = "0.4", features = ["diesel_mysql_pool"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
